# BaccaratProject

./: .gitignore  meson.build
shaders/: pixel_dither.frag
src/: main.cpp  textures.hpp
src/Classes/: Card.hpp  Dealer.hpp  Enemy.hpp  Light.hpp  LightSystem.hpp
src/Classes/Interfaces/: IClickable.hpp  IObjectAction.hpp
textures/: tex.txt
